--- a/style/main.css
+++ b/style/main.css
@@ -1,1 +1,50 @@
+.form {
+  /* display: flex;
+  flex-direction: column;
+  align-items: center; */
 
+  width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px;
+
+  outline: 2px solid gray;
+}
+
+.form-filed {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+
+  /* outline: 2px solid gray; */
+}
+.form-filed label {
+  margin-bottom: 10px;
+}
+.form-filed input {
+  padding: 5px;
+}
+
+.group {
+  margin-bottom: 10px;
+}
+.group-title {
+  margin-top: 0;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+}
+.group-topick {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.group-topick li {
+  display: flex;
+  align-items: center;
+}
+
+.group-topick label {
+  font-size: 20px;
+  margin-left: 10px;
+}
